logs/django-queries.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_queries-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/queries'...
Compiling './lib/python3.5/site-packages/queries/sites.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sites.py, line 304)
Listing './lib/python3.5/site-packages/queries/templatetags'...
Compiling './lib/python3.5/site-packages/queries/templatetags/query_list.py'...
***   File "./lib/python3.5/site-packages/queries/templatetags/query_list.py", line 97
    raise AttributeError, \
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/queries/views'...
Compiling './lib/python3.5/site-packages/queries/views/template.py'...
***   File "./lib/python3.5/site-packages/queries/views/template.py", line 74
    except template.TemplateSyntaxError, e:
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
